[tool.poetry]
name = "cipher_jiachen_guov"
version = "0.0.1"
description = "good"
authors = ["Jiachen Guo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.12"
pandas = "^1.3.4"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
